add applications api fix list clusters api filter bug
